# libtorch_pytorch_mnist

./: .gitignore  LICENSE  README.md  conda.yaml
libtorch/: CMakeLists.txt  predict.cpp
libtorch/pcamera/: CMakeLists.txt
libtorch/pcamera/src/: predict_camera.cpp  processor.cpp  processor.h
libtorch/pimage/: CMakeLists.txt
libtorch/pimage/src/: predict_image.cpp
pytorch/: conda-linux.yaml  convert_model.py  data.py  func.py  model.py  predict.py  train.py
